UI alignment fix

--- a/src/app/inventory/inventory.component.scss
+++ b/src/app/inventory/inventory.component.scss
@@ -6,3 +6,10 @@
         margin: 0 !important;
     }
 }
+
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+}
